# ST

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml
.github/workflows/: dokku.yml
requirements/: dev.txt  prod.txt
schedtrans/: engine.py
schedtrans/controllers/: webhooks.py
schedtrans/httpx_client/: client.py
schedtrans/json_request/: request.py
schedtrans/logger/: log.py
schedtrans/prepare_data/: process_data_generate.py
schedtrans/telegram/: commands.py  common.py  keyboards.py  routes.json
schedtrans/telegram/management/commands/: startbot.py
schedtrans/tests/: test_search.py
schedtrans/tests/fixtures/: search.json
