[project]
name = "ST"
version = "0.1.0"
description = "Schedule Transport"
authors = [
    {name = "Alexander Pavlov (TurtleOld)", email = "dev@pavlovteam.ru"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache 2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
