[tool.poetry]
name = "schedtrans"
version = "0.1.0"
description = "Schedule Transport"
authors = ["TurtleOld <dev@pavlovteam.ru>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.16.1"
blacksheep = "^2.0.7"
httpx = {extras = ["http2"], version = "^0.26.0"}
loguru = "^0.7.2"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"
aiohttp = "^3.9.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^24.2.0"
icecream = "^2.1.3"
pytest = "^8.0.1"
pylint = "^3.0.3"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
startbot = "schedtrans.telegram.management.commands.startbot:main"


[tool.pytest.ini_options]
asyncio_mode = "auto"